# Saguaro

./: .gitattributes  .gitignore  .saguaro.rules.draft  CMakeLists.txt  GEMINI.md  MANIFEST.in  README.md  SAGUARO_ENTERPRISE_PROTOCOL.md  TOKENIZER_BUILD_FIX.md  adapter.vocab  build_secure.sh  close_braces  latest_report.md  open_braces  perf_test.py  pyproject.toml  requirements.txt  setup.py  test_tokenizer_overflow.py
.agent/workflows/: saguaro_execution_loop.md
.saguaro_repro/vectors/: index.pkl  metadata.json
adapters/: claude_tools.json  gemini_function_declarations.json
docs/: AI_MODEL_SAGUARO_ADOPTION.md  CODE_ANALYSIS.md  README.md  TOKENIZER_FIX_SUMMARY.md  architecture.md  benchmarks.md  configuration.md  installation.md  integration.md  raw_analysis.txt  raw_entrypoints.txt  raw_plumbing.txt  raw_verify_native.txt  raw_volatility.txt  usage_guide.md
docs/model_handling/: SAGUARO_NATIVE_PROTOCOL.md
docs/specs/: ssai_action.md  ssai_perception.md
downstream_agent/: Agentic Coding Roadmap Strategy.md  Saguaro Enhancement for Deterministic AI.md
saguaro/: __init__.py  cli.py  client.py  context.py  coverage.py  defaults.py  encoder.py  escalation.py  feedback.py  governor.py  health.py  knowledge_base.py  legislator.py  lib_resolver.py  profiling.py  quickstart.py  watcher.py  workset.py
saguaro-action/: action.yaml
saguaro/agents/: __init__.py  auditor.py  base.py  cartographer.py  perception.py  planner.py  sandbox.py  scribe.py  surgeon.py
saguaro/analysis/: dead_code.py  entry_points.py  health_card.py  heuristics.py  impact.py  report.py
saguaro/artifacts/: curriculum_presets.json  holographic_store.npy  holographic_store_keys.npy
saguaro/artifacts/codebooks/: verso_baseline.json
saguaro/benchmarks/: __init__.py  runner.py
saguaro/build_system/: ingestor.py
saguaro/chronicle/: __init__.py  core.py  diff.py  storage.py
saguaro/cloud/: __init__.py  client.py
saguaro/constellation/: __init__.py  manager.py
saguaro/coordination/: __init__.py  graph.py  memory.py
saguaro/data/: dataset_loader.py
saguaro/dni/: __init__.py  server.py
saguaro/indexing/: __init__.py  auto_scaler.py  engine.py  memory_optimized_engine.py  native_indexer_bindings.py  native_worker.py  tracker.py
saguaro/integrations/: __init__.py  langchain_tools.py
saguaro/learning/: __init__.py  mining.py  ranking.py  routing.py
saguaro/mcp/: __init__.py  adoption_metrics.py  server.py  tool_interceptor.py
saguaro/memory/: manager.py  session.py
saguaro/native/: CMakeLists.txt  __init__.py  _limits.py  build_ops.sh  build_secure.sh  fused_native_sparse_attention_op.py
saguaro/native/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
saguaro/native/build_test/: CMakeCache.txt
saguaro/native/controllers/: twin_mpc.py
saguaro/native/controllers/hardware/: hardware_control_daemon
saguaro/native/ops/: __init__.py  alphaqubit_ops.py  cayley_transform.py  circular_conv_op.py  dtc_ops.py  entropy_regularization_ops.py  fused_coconut_ops.py  fused_collapse_op.py  fused_continuous_thought_op.py  fused_depthwise_conv1d.py  fused_latent_reasoning_op.py  fused_lorentzian_gat.py  fused_mamba_op.py  fused_moe_dispatch_op.py  fused_qsg_op.py  fused_quls_loss_op.py  fused_qwt_tokenizer.py  fused_state_bus_op.py  fused_superposition_moe_op.py  fused_superposition_slots_op.py  fused_tensor_layers_op.py  fused_text_tokenizer.py  fused_token_shift_op.py  fused_unified_quantum_block_op.py  fused_wavelet_encoder.py  fused_wlam_op.py  hd_fisher_compression.py  hd_gradient_compression.py  hd_gradient_projection.py  hd_hierarchical_block_ops.py  hd_holographic_attention.py  hd_spectral_entropy.py  hd_state_buffer.py  hd_streaming_adapter.py  hyperdimensional_embedding.py  intrinsic_plasticity_ops.py  lib_loader.py  lmwt_ops.py  lorentzian_feature_transform.py  meta_controller_op.py  (+25 more)
saguaro/native/ops/fused_hnn_sequence/: __init__.py
saguaro/native/ops/fused_hnn_step/: __init__.py
saguaro/native/ops/fused_reasoning_stack/: check_allocations.sh
saguaro/native/runtime/: __init__.py  arch.py
saguaro/ops/: __init__.py  fused_text_tokenizer.py  holographic.py  lib_loader.py  quantum_ops.py
saguaro/orchestration/: determinism.py
saguaro/parsing/: __init__.py  parser.py
saguaro/planning/: engine.py  objects.py  roadmap.py
saguaro/refactor/: planner.py  renamer.py  safety.py  shims.py
saguaro/security/: enterprise.py
saguaro/sentinel/: __init__.py  policy.py  rules.py  verifier.py  verifier.py.bak
saguaro/sentinel/engines/: __init__.py  base.py  external.py  native.py  semantic.py
saguaro/simulation/: __init__.py  impact.py  regression.py  volatility.py
saguaro/storage/: __init__.py  memmap_vector_store.py  vector_store.py
saguaro/tokenization/: adaptive_qwt_tokenizer.py  intelligent_controller.py  qwt_text_tokenizer.py  superword_merger.py  train_baseline.py  vocab.py
saguaro/training/: __init__.py  holographic_trainer.py  losses.py
saguaro/utils/: file_utils.py
saguaro/verification/: contracts.py
scripts/: build_wheel.sh  codex_bridge.py  inspect_ops.py  repro_index.py  test_tokenizer_simple.py  train_adapter.py  train_baseline.py  verify_gradient_flow.py  verify_hybrid.py
tests/: patch.json  patch_core.json  test_agent_flow.py  test_benchmark.py  test_constellation.py  test_core_ops.py  test_health_dashboard.py  test_holographic_persistence.py  test_load_simple.py  test_mcp_auth.py  test_refutation_boost.py  test_semantic_windowing.py  test_sentinel.py  test_sentinel_failfast.py  test_simd_numerics.py  test_tracker_verification.py  test_vector_store_upsert.py
whitepaper/: main.aux  main.out  main.tex  main.toc
whitepaper/sections/: abstract.tex  agent_protocol.tex  architecture.tex  conclusion.tex  ecosystem.tex  introduction.tex
